Avance sobre funcionalidades técnico
Al técnico ya se le listan en la pestaña incidentes, las heladeras con desperfecto que están en sus localidades de servicio, y puede acceder desde ahí a un formulario para cerrarlo, falta hacer el POST de ese formulario.